<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soal_1"
            android:fontFamily="sans-serif"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtSoal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSoal"
            android:layout_marginTop="16dp"
            android:hint="@string/insert_word"
            android:inputType="text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonHasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtSoal1"
            android:layout_marginTop="16dp"
            android:text="@string/Submit"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtSoal1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/reset"
            app:layout_constraintStart_toEndOf="@id/buttonHasil"/>

        <TextView
            android:id="@+id/tvHasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_1"
            app:layout_constraintTop_toBottomOf="@+id/buttonHasil"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvVokal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vowel_characters"
            app:layout_constraintTop_toBottomOf="@+id/tvHasil"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvKonsonan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vowel_characters"
            app:layout_constraintTop_toBottomOf="@+id/tvVokal"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHasilVokal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text=" BDFG"
            app:layout_constraintTop_toBottomOf="@+id/tvHasil"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/tvVokal"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHasilKonsonan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text=" BDFG"
            app:layout_constraintTop_toBottomOf="@+id/tvVokal"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/tvKonsonan"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>